tests/baselines/reference/decoratorOnClassMethod6.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod6.ts(4,5): error TS1220: Invalid expression for method decorator.
  Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod6.ts (1 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>) => TypedPropertyDescriptor<T>;
    
    class C {
        @dec ["method"]() {}
        ~~~~
!!! error TS1220: Invalid expression for method decorator.
!!! error TS1220:   Supplied parameters do not match any signature of call target.
    }